# Hipparchus

./: .gitignore  MANUAL.md  README.md  pyproject.toml  run_hprs.sh  run_hprs_checked.sh
hipparchus/: __init__.py  __main__.py
scripts/: precache_presets.py  python_env.sh  release_preflight.sh  smoke_run.sh
src/hipparchus/: __init__.py  __main__.py  main.py
src/hipparchus/application/: __init__.py  controller.py  preset_store.py  presets.py  scene_builder.py
src/hipparchus/cache/: __init__.py  housekeeping.py  index.py  store.py
src/hipparchus/core/: __init__.py  application.py  config.py  project_state.py  settings_store.py
src/hipparchus/data_sources/: __init__.py  data_source_manager.py  overpass_geojson.py  overpass_provider.py  overpass_query.py  provider.py  rate_limit.py
src/hipparchus/export/: __init__.py  profiles.py  service.py  svg_clean.py
src/hipparchus/geometry/: __init__.py  circle_packing.py  hex_grid.py  ops.py  simplification.py  triangulation.py  voronoi.py
src/hipparchus/plugins/: __init__.py  interfaces.py  loader.py
src/hipparchus/rendering/: __init__.py  engine.py  geometry_adapter.py  models.py  skia_renderer.py
src/hipparchus/ui/: __init__.py  main_window.py
tests/: test_cache_store.py  test_export_profiles.py  test_geometry_adapter.py  test_geometry_tools.py  test_overpass_geojson.py  test_overpass_provider.py  test_overpass_query.py  test_preset_store.py  test_project_state.py  test_rendering_state.py  test_scene_builder.py  test_simplification_parallel.py  test_svg_exporter.py
(+3 files in other folders)
